# GaussianElimination

./: CMakeLists.txt  GaussianElimination.c  GaussianEliminationUsingMPI  GaussianEliminationUsingMPI.c  GaussianEliminationUsingOpenMP.c  GaussianEliminationUsingPThread.c  MatrixNormSerial.c  MatrixNormalizationCuda.cu  PThreadHelloWorld.c  get_data.c  get_data_new.c  matrixNorm.cu  mpi  mpi.c
